--- a/assets/desktop.ini
+++ b/assets/desktop.ini
@@ -1,2 +1,4 @@
 [LocalizedFileNames]
 Captura de tela 2026-02-26 074448.png=@Captura de tela 2026-02-26 074448,0
+Captura de tela 2026-02-26 085002.png=@Captura de tela 2026-02-26 085002,0
+Captura de tela 2026-02-26 085219.png=@Captura de tela 2026-02-26 085219,0
